welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var gol:Array[Int]
      ^golomb:2: error: local variables must be initialized
  var gol:Array[Int]
      ^golomb:8: error: not found: value i
    for (k <- 1 to gol(i)) {
                       ^golomb:9: error: not found: value i
      gol(i+k-1)=i
          ^golomb:9: error: not found: value i
      gol(i+k-1)=i
                 ^golomb:10: error: value += is not a member of Int
      ind+=1
         ^